src/components/Projects/Projects.module.scss
.projects {
  padding-top: 74px;
  padding-bottom: 105px;

  &__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-bottom: 48px;
  }

  &__title {
    display: flex;
    align-items: center;
  }

  &__line {
    width: 511px;
    height: 1px;
    margin-left: 16px;
    background-color: var(--accent-color);
  }

  &__nav {
    color: var(--white-color);
    font-weight: 500;
    font-size: 16px;
    font-family: 'Fira Code', monospace;
    line-height: 21px;

    &:hover {
      color: var(--accent-color);
      cursor: pointer;
      transition: 0.2s;
    }

    &::after {
      content: ' ~~>';
    }

    a {
      color: var(--white-color);
      text-decoration: none;

      &:hover {
        color: var(--accent-color);
        cursor: pointer;
        transition: 0.2s;
      }
    }
  }

  &__cards {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    justify-content: center;
  }

  &__button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: 48px;
    margin: 48px 0;
    padding: 25px;
    color: var(--white-color);
    font-weight: 500;
    font-size: 16px;
    font-family: 'Fira Code', monospace;
    line-height: 21px;
    background-color: transparent;
    border: 1px solid var(--accent-color);
    outline: none;

    &:hover {
      background-color: var(--accent-color);
      cursor: pointer;
      transition: 0.2s;
    }
  }
}

$breakpoint-tablet: 931px;
$breakpoint-mobile: 426px;

@media screen and (max-width: $breakpoint-tablet) {
  .projects {
    padding-bottom: 32px;

    &__container {
      align-items: center;
    }

    &__line {
      width: 100%;
      max-width: 200px;
    }
  }
}

@media screen and (max-width: $breakpoint-mobile) {
  .projects {
    padding-top: 48px;
    padding-bottom: 32px;

    &__line {
      display: none;
    }

    &__button {
      margin-top: 32px;
    }
  }
}

